--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,52 @@
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@600;700&display=swap');
+
 body {
+    margin: 0;
+    padding: 0;
     height: 100vh;
-    height: 100vw;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: #FEFBF6;
+}
+
+button {
+    border-radius: 50px;
+    background: #000;
+    display: flex;
+    padding: 10px 50px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border: none;
+
+}
+
+p {
+    color: #000;
+    text-align: center;
+    font-family: "Red Hat Display";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    width: 734px;
+    margin: 40px 0px;
+}
+
+a {
+    text-decoration: none;
+    color: #FFF;
+    font-family: "Red Hat Display";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+img {
+    width: 225px;
+    height: 250px;
 }
