--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     background: #FEFBF6;
 }
 
-button {
+.play-button {
     border-radius: 50px;
     background: #000;
     display: flex;
@@ -21,7 +21,34 @@ button {
     align-items: center;
     gap: 10px;
     border: none;
+    color: #FFF;
+    font-family: "Red Hat Display";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    cursor: pointer;
+    border: 4px solid #000;
+    margin: 0px 18px;
+}
 
+.ranking-button {
+    display: inline-flex;
+    padding: 10px 50px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 50px;
+    border: 4px solid #000;
+    cursor: pointer;
+    color: #000;
+
+    font-family: "Red Hat Display";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin: 0px 18px;
 }
 
 p {
@@ -38,15 +65,33 @@ p {
 
 a {
     text-decoration: none;
-    color: #FFF;
-    font-family: "Red Hat Display";
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
 }
 
 img {
     width: 225px;
     height: 250px;
+}
+
+.button-container {
+    display: flex;
+}
+
+@media (max-width: 800px) {
+    p {
+        width: auto;
+        padding: 30px;
+    }
+
+    .button-container {
+        display: contents;
+    }
+
+    .ranking-button,
+    .play-button {
+        margin: 10px 0px;
+    }
+
+    p {
+        margin: 0;
+    }
 }
