--- a/game/game.css
+++ b/game/game.css
@@ -36,7 +36,7 @@ h1 {
 
 .player {
     width: 400px;
-    height: 40px;
+    height: 41px;
     border-radius: 50px;
     border: 3px solid #000;
     font-family: "Red Hat Display";
@@ -72,4 +72,8 @@ h1 {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+}
+
+a {
+    text-decoration: none;
 }
