--- a/board/board.css
+++ b/board/board.css
@@ -17,9 +17,10 @@ body {
 
 .bingo-card {
     width: 443px;
-    height: 511px;
+    height: 525px;
     border-radius: 20px;
     background: #8CB9BD;
+    border: 4px solid #000;
 }
 
 h2 {
@@ -49,11 +50,14 @@ h2 {
     font-weight: 700;
     line-height: normal;
     border-radius: 5px;
+    border: 4px solid #000;
+
 }
 
 .number:hover {
-    border-radius: 50px;
-    background-color: #FEFBF6;
+    /* border-radius: 50px; */
+    /* background-color: #FEFBF6; */
+    background-color: #6AAA64;
 }
 
 .number-list {
