--- a/board/board.css
+++ b/board/board.css
@@ -16,6 +16,10 @@ body {
 }
 
 .bingo-card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     width: 443px;
     height: 525px;
     border-radius: 20px;
@@ -24,7 +28,6 @@ body {
 }
 
 h2 {
-    margin: 16;
     color: #000;
     text-align: center;
     font-family: "Red Hat Display";
@@ -32,6 +35,7 @@ h2 {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    margin: 12px;
 }
 
 .number {
@@ -60,7 +64,7 @@ h2 {
     background-color: #6AAA64;
 }
 
-.number-list {
+#number-list {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
