--- a/board/board.css
+++ b/board/board.css
@@ -55,12 +55,9 @@ h2 {
     line-height: normal;
     border-radius: 5px;
     border: 4px solid #000;
-
 }
 
-.number:hover {
-    /* border-radius: 50px; */
-    /* background-color: #FEFBF6; */
+.number-validate {
     background-color: #6AAA64;
 }
 
