--- a/board/board.css
+++ b/board/board.css
@@ -10,9 +10,8 @@ body {
     min-height: 100vh;
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    flex-direction: column;
 }
 
 .bingo-card {
@@ -66,4 +65,38 @@ h2 {
     flex-wrap: wrap;
     justify-content: space-evenly;
     margin: 8px;
+}
+
+.bingo-call {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#bingo-call-number {
+    color: #000;
+    font-family: "Red Hat Display";
+    font-size: 75px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+#verify {
+    border-radius: 50px;
+    background: #000;
+    display: inline-flex;
+    padding: 10px 50px;
+    height: 41px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    color: #FFF;
+    font-family: "Red Hat Display";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    border: none;
+    cursor: pointer;
 }
