--- a/board/board.css
+++ b/board/board.css
@@ -87,7 +87,7 @@ h2 {
 #bingo-call-number {
     color: #000;
     font-family: "Red Hat Display";
-    font-size: 75px;
+    font-size: 50px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
@@ -110,4 +110,26 @@ h2 {
     line-height: normal;
     border: none;
     cursor: pointer;
+}
+
+.turn-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#turns,
+.turns {
+    margin: 0;
+    color: #000;
+
+    font-family: "Red Hat Display";
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.bingo-numbers {
+    justify-content: space-around;
 }
