--- a/game/game.css
+++ b/game/game.css
@@ -94,11 +94,33 @@ p {
     font-family: "Red Hat Display";
     font-size: 16px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 700;
     line-height: normal;
 }
 
 .circle-shape {
+    margin: 0px 5px;
+    color: #000;
+    font-family: "Red Hat Display";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    border-radius: 50px;
+    border: 3.5px solid #000;
+    display: flex;
+    width: 41px;
+    height: 41px;
+    padding: 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+    background-color: #FEFBF6;
+}
+
+.circle-shape-target {
     margin: 0px 5px;
     display: flex;
     justify-content: center;
@@ -118,6 +140,26 @@ p {
 }
 
 .random {
+    color: #000;
+    text-align: center;
+    font-family: "Red Hat Display";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    border-radius: 50px;
+    border: 3.5px solid #000;
+    display: inline-flex;
+    padding: 7px 17px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+    background-color: #FEFBF6;
+
+}
+
+.random-target {
     display: inline-flex;
     padding: 0px 20px;
     height: 41px;
