--- a/game/game.css
+++ b/game/game.css
@@ -37,7 +37,7 @@ h1 {
     width: 400px;
     height: 41px;
     border-radius: 50px;
-    border: 3px solid #000;
+    border: 3.5px solid #000;
     font-family: "Red Hat Display";
     font-size: 16px;
     font-style: normal;
@@ -72,6 +72,26 @@ h1 {
     font-weight: 700;
     line-height: normal;
     cursor: pointer;
+}
+
+.not-ready {
+    margin-top: 10px;
+    color: #000;
+    text-align: center;
+    font-family: "Red Hat Display";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    display: flex;
+    width: 448.8px;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 50px;
+    border: 3.5px solid #000;
+    background-color: #FEFBF6;
 }
 
 a {
@@ -188,7 +208,8 @@ p {
         width: 70%;
     }
 
-    .ready {
+    .ready,
+    .not-ready {
         width: 80vw;
     }
 }
