--- a/board/board.css
+++ b/board/board.css
@@ -87,7 +87,6 @@ h2 {
     justify-content: center;
 }
 
-#refresh,
 #verify {
     border-radius: 50px;
     background: #000;
@@ -104,6 +103,25 @@ h2 {
     font-weight: 700;
     line-height: normal;
     border: none;
+    cursor: pointer;
+}
+
+#refresh {
+    border-radius: 50px;
+    display: inline-flex;
+    padding: 10px 50px;
+    height: 41px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    color: #000;
+    font-family: "Red Hat Display";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    border: 3.5px solid #000;
+    background-color: #FEFBF6;
     cursor: pointer;
 }
 
