fix design error

--- a/board/board.css
+++ b/board/board.css
@@ -217,6 +217,14 @@ select:focus {
     }
 }
 
+.arrow-icon {
+    position: absolute;
+    margin: 50px;
+    cursor: pointer;
+    height: 30px;
+    width: auto;
+}
+
 @media (max-width: 520px) {
     .container {
         flex-direction: column;
@@ -249,14 +257,10 @@ select:focus {
         width: 350px;
         height: 450px;
     }
-}
 
-.arrow-icon {
-    position: absolute;
-    margin: 50px;
-    cursor: pointer;
-    height: 30px;
-    width: auto;
+    .arrow-icon {
+        margin: 20px !important;
+    }
 }
 
 @media (max-width: 380px) {
@@ -272,5 +276,9 @@ select:focus {
 
     h2 {
         font-size: 20px !important;
+    }
+
+    .arrow-icon {
+        margin: 20px !important;
     }
 }
